etc/iptables/iptables.rules
# Generated by iptables-save v1.4.12.1 on Sun Sep 18 12:33:21 2011
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [559:388327]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A TCP -p tcp -m tcp --dport 80 -j ACCEPT
-A TCP -p tcp -m tcp --dport 61357 -j ACCEPT
-A TCP -p tcp -m tcp --dport 49152 -j ACCEPT
-A UDP -p udp -m udp --dport 53 -j ACCEPT
-A UDP -p udp -m udp --dport 8303 -j ACCEPT
-A UDP -p udp -m udp --dport 8304 -j ACCEPT
-A UDP -p udp -m udp --dport 8305 -j ACCEPT
-A UDP -p udp -m udp --dport 61357 -j ACCEPT
-A UDP -p udp -m udp --dport 49152 -j ACCEPT
-A UDP -p udp -m udp --dport 80 -j ACCEPT
COMMIT
# Completed on Sun Sep 18 12:33:21 2011
